added devtools and custom health indicator

--- a/lsb-web/src/main/resources/templates/index.html
+++ b/lsb-web/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/main.css"/>
 </head>
 <body><h1>Learning Spring Boot - 2nd Edition</h1>
+<h4 th:text="${extra}"></h4>
 <div>
     <table>
         <thead>
